[package]
name = "hao"
version = "0.0.1-prerelease"
edition = "2021"
description = ".net binary reader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.35"
goblin = { version = "0.6.1", default-features = false, features = ["pe32"] }
bitflags = "2.2.1"
num-traits = "0.2"
num-derive = "0.3"
uuid = "1.3.1"
