[package]
name = "hao"
authors = ["Sam M."]
categories = ["parsing"]
keywords = [".net", "managed", "c#", "mono.cecil", "dnlib"]

version = "0.0.2-prerelease"
edition = "2021"
description = ".net binary reader"
license = "MIT"
repository = "https://github.com/pigeonhands/hao"
documentation = "https://docs.rs/hao"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.35"
goblin = { version = "0.6.1", default-features = false, features = ["pe32"] }
bitflags = "2.2.1"
num-traits = "0.2"
num-derive = "0.3"
uuid = "1.3.1"
phf = { version = "0.11.1", features = ["macros"]  }
