[package]
name = "hao"
authors = ["Sam M."]
categories = ["parsing"]
keywords = ["dotnet", "managed", "csharp", "netcore",  "dnlib"]

version = "0.0.3"
edition = "2021"
description = ".net binary reader"
license = "MIT"
repository = "https://github.com/pigeonhands/hao"
documentation = "https://docs.rs/hao"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.35"
pewter = { version = "0.0.3"}
bitflags = "2.2.1"
num-traits = "0.2"
num-derive = "0.3"
uuid = "1.3.1"
phf = { version = "0.11.1", features = ["macros"]  }


[features]
default = ["std"]
std = []

